--- a/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/base.scss
@@ -3,7 +3,7 @@
 @import 'bootstrap-custom';
 
 @import 'syntax-highlight';
-@import "mathjax";
+@import 'mathjax';
 @import 'components';
 @import 'partials/logo';
 @import 'partials/top-banner';
