--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -68,3 +68,7 @@
 @import 'partials/data-analysis-anomaly-detection';
 @import 'partials/docs-menu';
 @import 'partials/table-contents';
+@import 'partials/documentation-article';
+@import 'partials/documentation';
+@import 'partials/lang-switcher';
+@import 'partials/copy-code';
