--- a/qdrant-landing/themes/qdrant-2024/layouts/documentation/list.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/documentation/list.html
@@ -5,6 +5,5 @@
     {{ partial "menu-mobile" . }}
   </header>
 
-  {{ partial "docs-menu" . }}
-  {{ partial "table-contents" . }}
+  {{ partial "documentation" . }}
 {{ end }}
