--- a/qdrant-landing/themes/qdrant-2024/layouts/documentation/single.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/documentation/single.html
@@ -1,1 +1,9 @@
-{{ define "main" }}{{ end }}
+{{ define "main" }}
+  <header class="main-header">
+    {{ partial "top-banner" . }}
+    {{ partial "menu" . }}
+    {{ partial "menu-mobile" . }}
+  </header>
+
+  {{ partial "documentation" . }}
+{{ end }}
