--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docs-menu.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_docs-menu.scss
@@ -5,113 +5,45 @@
   border-top: 1px solid $neutral-30;
   margin: 0 -16px;
 
-  &--active {
-    .docs-menu__content {
-      display: block;
-    }
-
-    .docs-menu__header .docs-menu__button svg {
-      transform: rotate(180deg);
-    }
-  }
-
   &__header {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: rem(15) rem(20);
-  }
 
-  &__header h2 {
-    font-size: map-get($font-sizes-text, 'l');
-    line-height: rem(27);
-    font-weight: 400;
-    color: $neutral-90;
-    margin: 0;
+    &.active {
+      .docs-menu__button svg {
+        transform: rotate(180deg);
+      }
+    }
+
+    h2 {
+      font-size: rem(18);
+      line-height: rem(27);
+      font-weight: 400;
+      color: $neutral-90;
+      margin: 0;
+    }
   }
 
   &__content {
     display: none;
-    padding: $spacer * 1.5 $spacer * 2.5;
+    padding: $spacer * 1.5 $spacer * 2 rem(12);
   }
 
   &__input {
     position: relative;
-  }
 
-  &__input svg {
-    position: absolute;
-    top: 50%;
-    left: $spacer;
-    transform: translateY(-50%);
-  }
-
-  &__input input {
-    padding-left: $spacer * 2.5;
-  }
-
-  &__links {
-    padding: 0;
-    margin-top: $spacer * 1.5;
-    margin-bottom: 0;
-    list-style: none;
-  }
-
-  &__title {
-    color: $neutral-98;
-    font-weight: bold;
-    font-size: map-get($font-sizes-text, 'l');
-    line-height: rem(27);
-    margin: 0 0 $spacer;
-  }
-
-  &__section {
-    margin-bottom: $spacer * 1.5;
-  }
-
-  &__section:last-of-type {
-    margin-bottom: 0;
-  }
-
-  &__menu {
-    color: $neutral-70;
-    list-style: none;
-    padding: 0;
-  }
-
-  &__menu-item {
-    font-size: map-get($font-sizes-text, 'md');
-    line-height: rem(24);
-    margin-bottom: rem(12);
-
-    &.active {
-      padding: rem(4) 0 rem(4) $spacer;
-      border-left: rem(1) solid $primary-50;
-      font-weight: 600;
-      background-color: $neutral-30;
-      color: $neutral-90;
-    }
-  }
-
-  &__menu-item--active {
-    .docs-menu__submenu {
-      display: block;
+    svg {
+      position: absolute;
+      top: 50%;
+      left: $spacer;
+      transform: translateY(-50%);
     }
 
-    .docs-menu__button svg {
-      transform: rotate(90deg);
+    input {
+      padding-left: $spacer * 2.5;
     }
-  }
-
-  &__menu-item:last-of-type {
-    margin-bottom: 0;
-  }
-
-  &__menu-item-content {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
   }
 
   &__button {
@@ -126,29 +58,90 @@
     justify-content: center;
   }
 
-  &__submenu {
-    display: none;
-    list-style: none;
-    padding-left: $spacer;
-    margin-top: calc($spacer / 2);
-  }
+  &__links {
+    margin-top: $spacer * 1.5;
 
-  &__submenu-item {
-    margin-bottom: calc($spacer / 2);
-  }
+    &-title {
+      color: $neutral-98;
+      font-weight: bold;
+      font-size: rem(18);
+      line-height: rem(27);
+      margin: 0 0 $spacer;
+      padding-top: $spacer * 0.5;
+    }
 
-  &__submenu-item:last-of-type {
-    margin-bottom: 0;
-  }
+    &-group {
+      padding-bottom: rem(4);
 
-  &__submenu-item a {
-    color: $neutral-70;
-    font-size: rem(14);
-    line-height: rem(21);
+      &-heading {
+        display: block;
+        position: relative;
+        margin-bottom: $spacer * 0.5;
+
+        a {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          color: $neutral-70;
+        }
+      }
+
+      summary:after {
+        content: '';
+        display: block;
+        width: rem(10);
+        height: rem(10);
+        position: absolute;
+        top: rem(7);
+        right: 0;
+        background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 10 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.16667 0.916341C3.10476 0.869913 3.03115 0.841641 2.95409 0.834692C2.87702 0.827742 2.79954 0.842391 2.73033 0.876997C2.66112 0.911602 2.60291 0.964797 2.56223 1.03062C2.52155 1.09644 2.5 1.17229 2.5 1.24967V8.74968C2.5 8.82706 2.52155 8.90291 2.56223 8.96873C2.60291 9.03455 2.66112 9.08775 2.73033 9.12235C2.79954 9.15696 2.87702 9.17161 2.95409 9.16466C3.03115 9.15771 3.10476 9.12944 3.16667 9.08301L8.16667 5.33301C8.21842 5.2942 8.26042 5.24387 8.28934 5.18601C8.31827 5.12816 8.33333 5.06436 8.33333 4.99967C8.33333 4.93499 8.31827 4.87119 8.28934 4.81334C8.26042 4.75548 8.21842 4.70515 8.16667 4.66634L3.16667 0.916341Z' fill='%238F98B3'/%3E%3C/svg%3E%0A");
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+
+      &.active {
+        .docs-menu__links-group-heading > a {
+          padding: rem(4) 0 rem(4) $spacer;
+          border-left: rem(1) solid $primary-50;
+          font-weight: 600;
+          background-color: $neutral-30;
+          color: $neutral-90;
+        }
+
+        summary:after {
+          top: rem(11);
+          background-image: url("data:image/svg+xml,%3Csvg width='10' height='10' viewBox='0 0 10 10' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M4.66732 8.16667C4.70781 8.21588 4.75871 8.25552 4.81634 8.28273C4.87397 8.30995 4.93692 8.32406 5.00065 8.32406C5.06439 8.32406 5.12733 8.30995 5.18496 8.28273C5.2426 8.25552 5.29349 8.21588 5.33398 8.16667L9.08399 3.16667C9.13041 3.10476 9.15869 3.03115 9.16564 2.95409C9.17258 2.87702 9.15794 2.79954 9.12333 2.73033C9.08872 2.66112 9.03553 2.60291 8.96971 2.56223C8.90388 2.52155 8.82803 2.5 8.75065 2.5H1.25065C1.17327 2.5 1.09742 2.52155 1.0316 2.56223C0.965773 2.60291 0.912579 2.66112 0.877973 2.73033C0.843368 2.79954 0.828719 2.87702 0.835668 2.95409C0.842617 3.03115 0.87089 3.10476 0.917318 3.16667L4.66732 8.16667Z' fill='%238F98B3'/%3E%3C/svg%3E%0A");
+        }
+      }
+    }
+
+    &-submenu {
+      margin-bottom: 0;
+      padding-left: $spacer;
+
+      &-item {
+        margin-bottom: $spacer * 0.5;
+        list-style: none;
+
+        a {
+          color: $neutral-70;
+          font-size: rem(14);
+          line-height: rem(21);
+        }
+
+        &.active {
+          a {
+            color: $primary-50;
+          }
+        }
+      }
+    }
   }
 
   @include media-breakpoint-up(xl) {
     background-color: $neutral-10;
+    border-top: none;
     margin: 0;
 
     &__header {
@@ -160,9 +153,11 @@
       padding: 0;
     }
 
-    &__menu-item {
+    &__links-group {
       &.active {
-        background-color: $neutral-20;
+        .docs-menu__links-group-heading > a {
+          background-color: $neutral-20;
+        }
       }
     }
   }
