--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/docs-menu.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/docs-menu.html
@@ -1,91 +1,109 @@
-{{ with (.Site.GetPage "/headless/docs-menu") }}
-  <div class="col-12 col-xl-2">
-    <div id="docs-menu" class="docs-menu" onclick="toggleMenuDocs(event)">
-      <div class="docs-menu__header">
-        <h2>{{ .Params.title }}</h2>
-        <button type="button" class="docs-menu__button">{{ partial "svg" "arrow-sm-down-white.svg" }}</button>
+{{ $currentNode := . }}
+<div class="col-12 col-xl-2">
+  <div class="docs-menu">
+    <div id="sidebar-toggle" class="docs-menu__header">
+      <h2>Docs Menu</h2>
+      <button type="button" class="docs-menu__button">{{ partial "svg" "arrow-sm-down-white.svg" }}</button>
+    </div>
+    <div id="sidebar" class="docs-menu__content">
+      <div class="docs-menu__input">
+        {{ partial "svg" "search-white.svg" }}
+        <input
+          class="q-input input_md input_light-bg"
+          type="text"
+          name="search"
+          value=""
+          placeholder="Search"
+          required=""
+        />
       </div>
-      <div class="docs-menu__content">
-        <div class="docs-menu__input">
-          {{ partial "svg" "search-white.svg" }}
-          <input
-            class="input input_md input_light-bg"
-            type="text"
-            name="search"
-            value=""
-            placeholder="{{ .Params.search }}"
-            required=""
-          />
-        </div>
-        <ul class="docs-menu__links">
-          {{ range .Params.menuSections }}
-            <li class="docs-menu__section">
-              <h3 class="docs-menu__title">{{ .title }}</h3>
-              {{ if .menuItems }}
-                <ul class="docs-menu__menu">
-                  {{ range .menuItems }}
-                    <li class="docs-menu__menu-item" data-path="{{ .id }}" onclick="toggleMenuItem(event, '{{ .id }}')">
-                      <div class="docs-menu__menu-item-content">
-                        <span>{{ .name }}</span>
-                        {{ if .subMenuItems }}
-                          <button type="button" class="docs-menu__button">
-                            {{ partial "svg" "angle-sm-right.svg" }}
-                          </button>
-                        {{ end }}
-                        {{ if .isExternalUrl }}
-                          <button type="button" class="docs-menu__button">
-                            {{ partial "svg" "external-link.svg" }}
-                          </button>
-                        {{ end }}
-                      </div>
-                      {{ if .subMenuItems }}
-                        <ul class="docs-menu__submenu">
-                          {{ range .subMenuItems }}
-                            <li class="docs-menu__submenu-item">
-                              <a
-                                href="{{ .url }}"
-                                {{ if strings.HasPrefix .url "http" }}
-                                  target="_blank" rel="noopener noreferrer nofollow"
-                                {{ end }}
-                              >
-                                <span>{{ .name }}</span>
-                              </a>
-                            </li>
-                          {{ end }}
-                        </ul>
-                      {{ end }}
-                    </li>
-                  {{ end }}
-                </ul>
+
+      {{ $subject := site.GetPage "documentation" }}
+
+
+      <nav class="docs-menu__links">
+        {{ range $subject.Pages }}
+          {{ if (eq .Params.type "delimiter") }}
+            <h3 class="docs-menu__links-title">{{ .Title }}</h3>
+          {{ else }}
+            {{ if and (.IsPage) (not .Params.hideInSidebar) }}
+              <div class="docs-menu__links-group {{ if eq .File.UniqueID $currentNode.File.UniqueID }}active{{ end }}">
+                <div class="docs-menu__links-group-heading">
+                  <a
+                    href="{{ if (eq .Params.type "external-link") }}
+                      {{ .Params.external_url }}
+                    {{ else }}
+                      {{ .Permalink }}
+                    {{ end }}"
+                    {{ if (eq .Params.type "external-link") }}target="_blank"{{ end }}
+                  >
+                    {{ .Title }}
+                    {{ if (eq .Params.type "external-link") }}
+                      {{ partial "svg" "external-link.svg" }}
+                    {{ end }}
+                  </a>
+                </div>
+              </div>
+            {{ end }}
+
+            {{ if and (.IsSection) (not .Params.hideInSidebar) }}
+
+              <!-- current page is active or any sub-page is active -->
+              {{ $isActive := false }}
+              {{ range .RegularPages }}
+                {{ if eq .File.UniqueID $currentNode.File.UniqueID }}
+                  {{ $isActive = true }}
+                {{ end }}
               {{ end }}
-            </li>
+
+              {{ if eq .File.UniqueID $currentNode.File.UniqueID }}
+                {{ $isActive = true }}
+              {{ end }}
+
+              {{ $sectionLink := .Permalink }}
+
+              {{ if .Params.is_empty }}
+                {{ $sectionLink = (index (.RegularPages) 0).Permalink }}
+              {{ end }}
+
+
+              <details
+                class="docs-menu__links-group link-group {{ if $isActive }}active{{ end }}"
+                {{ if $isActive }}open{{ end }}
+              >
+                <summary class="docs-menu__links-group-heading">
+                  <a href="{{ $sectionLink }}">
+                    {{ .Title }}
+                  </a>
+                </summary>
+
+                <nav>
+                  <ul class="docs-menu__links-submenu">
+                    {{ range .RegularPages }}
+                      {{ if (eq .Params.type "external-link") }}
+                        <li class="docs-menu__links-submenu-item">
+                          <a href="{{ .Params.external_url }}" target="_blank">
+                            {{ .Title }}
+                            {{ partial "svg" "external-link.svg" }}
+                          </a>
+                        </li>
+                      {{ else if not .Params.hideInSidebar }}
+                        <li
+                          class="docs-menu__links-submenu-item{{ if eq .File.UniqueID $currentNode.File.UniqueID }}
+                            active
+                          {{ end }}"
+                        >
+                          <a href="{{ .Permalink }}">{{ .Title }}</a>
+                        </li>
+                      {{ end }}
+                    {{ end }}
+                  </ul>
+                </nav>
+              </details>
+            {{ end }}
           {{ end }}
-        </ul>
-      </div>
+        {{ end }}
+      </nav>
     </div>
   </div>
-  <script>
-    function toggleMenuDocs(e) {
-      if (e) {
-        e.preventDefault();
-        e.stopPropagation();
-      }
-
-      const menu = document.getElementById('docs-menu');
-      if (menu) {
-        menu.classList.toggle('docs-menu--active');
-      }
-    }
-    function toggleMenuItem(e, id) {
-      if (e) {
-        e.preventDefault();
-        e.stopPropagation();
-      }
-
-      const menuItem = document.querySelector(`[data-path=${id}]`);
-      if (menuItem) {
-        menuItem.classList.toggle('docs-menu__menu-item--active');
-      }
-    }
-  </script>
-{{ end }}
+</div>
