--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/table-contents.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/table-contents.html
@@ -1,41 +1,33 @@
-{{ with (.Site.GetPage "/headless/table-contents") }}
-  <div class="col-12 col-xl-2">
+<div class="col-12 col-xl-2">
+  {{ if gt (.TableOfContents | len) 34 }}
     <div class="table-contents">
       <h2 class="table-contents__title">{{ .Params.title }}</h2>
-      <ul class="table-contents__links">
-        {{ range .Params.links }}
-          <li class="table-contents__link">
-            <a
-              href="{{ .url }}"
-              {{ if strings.HasPrefix .url "http" }}target="_blank" rel="noopener noreferrer nofollow"{{ end }}
-            >
-              <span>{{ .name }}</span>
-            </a>
-          </li>
-        {{ end }}
-      </ul>
+
+      {{ .TableOfContents }}
+
+
       <ul class="table-contents__external-links">
-        {{ range .Params.externalLinks }}
-          <li class="table-contents__link">
-            <a
-              href="{{ .url }}"
-              {{ if strings.HasPrefix .url "http" }}target="_blank" rel="noopener noreferrer nofollow"{{ end }}
-            >
-              <span class="table-contents__link__icon" style="background-image: url(/icons/outline/{{ .icon }})">
-              </span>
-              <span>{{ .name }}</span>
-            </a>
-          </li>
-        {{ end }}
+        <li class="table-contents__link">
+          <a href="/">
+            {{ partial "svg" "github-red.svg" }}
+            Edit on Github
+          </a>
+        </li>
+        <li class="table-contents__link">
+          <a href="/">
+            {{ partial "svg" "bug-red.svg" }}
+            Create an issue
+          </a>
+        </li>
       </ul>
       <div class="table-contents__feedback">
-        <h2 class="table-contents__feedback__title">{{ .Params.feedback.title }}</h2>
-        <p class="table-contents__feedback__question">{{ .Params.feedback.question }}</p>
+        <h2 class="table-contents__feedback__title">Feedback</h2>
+        <p class="table-contents__feedback__question">Was this page helpful?</p>
         <div class="table-contents__feedback__controls">
           <button class="table-contents__feedback__button" type="button">Yes</button>
           <button class="table-contents__feedback__button" type="button">No</button>
         </div>
       </div>
     </div>
-  </div>
-{{ end }}
+  {{ end }}
+</div>
