post font-weight

--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-post.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-post.scss
@@ -45,6 +45,9 @@
     li {
       margin-bottom: $spacer * 2;
     }
+    p, li, table {
+      font-weight: 400;
+    }
 
     a:hover {
       text-decoration: underline;
