--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_breadcrumbs.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_breadcrumbs.scss
@@ -1,10 +1,13 @@
 .breadcrumbs {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   color: $neutral-60;
   margin: 0;
   padding: 0;
+  @include media-breakpoint-up(xl) {
+    width: $post-content-width;
+    margin: 0 auto;
+  }
 
   &__crumb {
     display: inline-block;
