--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_menu.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_menu.scss
@@ -30,6 +30,7 @@
     border: none;
     width: rem(40);
     height: rem(40);
+    padding: 0 8px;
     border-radius: 8px;
     z-index: 1;
     background: linear-gradient($neutral-20, #0e1424);
