--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-cloud-bento-cards.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-cloud-bento-cards.scss
@@ -40,7 +40,7 @@
     }
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-bottom: $spacer * 5;
 
     &__cards {
