--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-vector-database-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-vector-database-hero.scss
@@ -39,7 +39,7 @@
     display: none;
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 5;
 
     &__title {
