--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-vector-database-use-cases.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_qdrant-vector-database-use-cases.scss
@@ -53,7 +53,7 @@
     }
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-top: $spacer * 7.5;
     padding-bottom: $spacer * 10;
 
