--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-use-cases.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-vector-database-use-cases.html
@@ -4,12 +4,12 @@
       <div class="qdrant-vector-database-use-cases__cases">
         {{ range $index, $element := .Params.items }}
           <div class="qdrant-vector-database-use-cases__case {{ if mod $index 2 | eq 1 }}case-reversed{{ end }} row">
-            <div class="qdrant-vector-database-use-cases__case-text col-12 col-xl-5">
+            <div class="qdrant-vector-database-use-cases__case-text col-12 col-lg-5">
               <h3 class="qdrant-vector-database-use-cases__case-title">{{ .title }}</h3>
               <p class="qdrant-vector-database-use-cases__case-description">{{ .description }}</p>
               <a class="link link_light link_md align-self-start" href="{{ .link.url }}">{{ .link.text }}</a>
             </div>
-            <div class="qdrant-vector-database-use-cases__case-preview col-12 col-xl-6">
+            <div class="qdrant-vector-database-use-cases__case-preview col-12 col-lg-6">
               <img src="{{ .image.src }}" alt="{{ .image.alt }}" />
             </div>
           </div>
