--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_additional-resources.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_additional-resources.scss
@@ -67,6 +67,14 @@
     text-decoration: none;
   }
 
+  @include media-breakpoint-up(md) {
+
+    &__cards {
+      justify-content: space-between;
+      gap: 0;
+    }
+  }
+
   @include media-breakpoint-up(xl) {
     padding-top: $spacer * 7.5;
     padding-bottom: $spacer * 7.5;
@@ -78,9 +86,6 @@
     }
 
     &__cards {
-      justify-content: space-between;
-      gap: 0;
-
       & > div {
         width: calc(25% - 4.5px);
       }
