--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_enterprise-solutions-hero.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_enterprise-solutions-hero.scss
@@ -39,7 +39,7 @@
     display: none;
   }
 
-  @include media-breakpoint-up(xl) {
+  @include media-breakpoint-up(lg) {
     padding-left: 0;
     padding-right: 0;
     padding-top: $spacer * 5;
