--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/additional-resources.html
@@ -4,7 +4,7 @@
       <h2 class="additional-resources__title">{{ .Params.title }}</h2>
       <div class="additional-resources__cards row">
         {{ range .Params.resourceCards }}
-          <div class="additional-resources__card col-12 col-xl-3">
+          <div class="additional-resources__card col-12 col-md-6 col-xl-3 gy-3 gy-xl-0">
             <div class="additional-resources__card-info">
               <div>
                 {{ .icon | safeHTML }}
