Add Documentation page (#861)
* create menu structure

* add docs menu

* minor tweaks

* add table contents

* add article

* fix

* add text trim and indentation

* fix

---------

Co-authored-by: Nik Shemel <nikita_shershnev@hotmail.com>

--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/js.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/js.html
@@ -72,3 +72,12 @@
     });
   </script>
 {{ end }}
+
+{{ if eq .Section "documentation" }}
+  <script>
+    document.getElementById('sidebar-toggle').addEventListener('click', () => {
+      document.getElementById('sidebar-toggle').classList.toggle('active');
+      document.getElementById('sidebar').classList.toggle('active');
+    });
+  </script>
+{{ end }}
