--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -66,4 +66,8 @@
 @import 'partials/retrieval-augmented-generation-integrations';
 @import 'partials/retrieval-augmented-generation-evaluation';
 @import 'partials/data-analysis-anomaly-detection';
+@import 'partials/docs-menu';
+@import 'partials/table-contents';
+@import 'partials/documentation-article';
+@import 'partials/documentation';
 @import 'partials/share-buttons';
