--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/js-head.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/js-head.html
@@ -24,10 +24,9 @@
 <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
 
 {{ if eq .Section "benchmarks" }}
-  {{ $chartJs := resources.Get "/js/vendor/chart.js" | js.Build | minify | resources.Fingerprint "sha512" }}
-  <script src="{{ $chartJs.RelPermalink }}"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  {{ $benchmarksJs := resources.Get "/js/benchmarks/benchmarks.js" | js.Build | minify | resources.Fingerprint "sha512" }}
+  {{ $benchmarksJs := resources.Get "/js/benchmarks/benchmarks.js" | minify | resources.Fingerprint "sha512" }}
   <script src="{{ $benchmarksJs.RelPermalink }}"></script>
-  {{ $filterChartJs := resources.Get "/js/benchmarks/benchmarks_filtered_search.js" | js.Build | minify | resources.Fingerprint "sha512" }}
+  {{ $filterChartJs := resources.Get "/js/benchmarks/benchmarks_filtered_search.js" | minify | resources.Fingerprint "sha512" }}
+  <script src="{{ $filterChartJs.RelPermalink }}"></script>
 {{ end }}
