--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-post.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/qdrant-post.html
@@ -14,6 +14,11 @@
         <img class="qdrant-post__preview" src="{{ .context.Params.preview_dir }}/title.jpg" alt="Preview" />
       {{ end }}
     </div>
+    <div class="row">
+      <div class="col-12 mb-5">
+        {{ partial "breadcrumbs" .context }}
+      </div>
+    </div>
 
     <div class="qdrant-post__body">
       {{ if ne .variant "centered" }}
