tables, images, figures

--- a/qdrant-landing/themes/qdrant-2024/assets/css/_bootstrap-custom.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/_bootstrap-custom.scss
@@ -14,6 +14,7 @@
 @import 'bootstrap/scss/containers';
 @import 'bootstrap/scss/grid';
 @import 'bootstrap/scss/tables';
+@import "bootstrap/scss/images";
 @import 'bootstrap/scss/forms';
 @import 'bootstrap/scss/buttons';
 @import 'bootstrap/scss/transitions';
