--- a/qdrant-landing/themes/qdrant-2024/assets/css/partials/_documentation-article.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/partials/_documentation-article.scss
@@ -39,42 +39,15 @@
     background-color: $neutral-20;
   }
 
-  aside {
-    position: relative;
-    padding: $spacer * 1.5 $spacer * 1.5 $spacer * 1.5 $spacer * 3.5;
-    margin-bottom: $spacer;
-    font-size: rem(14);
-    line-height: rem(21);
-    background-color: $secondary-blue-10;
-    color: $secondary-blue-70;
-    border-radius: $spacer * 0.5;
-
-    a {
-      color: $secondary-blue-70;
-      border-bottom: rem(1) solid $secondary-blue-70;
-    }
-
-    &:before {
-      content: '';
-      display: block;
-      position: absolute;
-      left: $spacer * 1.5;
-      top: $spacer * 1.5;
-      height: rem(20);
-      width: $spacer;
-      background-image: url("data:image/svg+xml,%3Csvg width='16' height='20' viewBox='0 0 16 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_3871_25924)'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M8 5.33333C4.3181 5.33333 1.33333 8.3181 1.33333 12C1.33333 15.6819 4.3181 18.6667 8 18.6667C11.6819 18.6667 14.6667 15.6819 14.6667 12C14.6667 8.3181 11.6819 5.33333 8 5.33333ZM0 12C0 7.58172 3.58172 4 8 4C12.4183 4 16 7.58172 16 12C16 16.4183 12.4183 20 8 20C3.58172 20 0 16.4183 0 12ZM8 8C8.36819 8 8.66667 8.29848 8.66667 8.66667V12.6667C8.66667 13.0349 8.36819 13.3333 8 13.3333C7.63181 13.3333 7.33333 13.0349 7.33333 12.6667V8.66667C7.33333 8.29848 7.63181 8 8 8ZM8.66667 15.3333C8.66667 15.7015 8.36819 16 8 16C7.63181 16 7.33333 15.7015 7.33333 15.3333C7.33333 14.9651 7.63181 14.6667 8 14.6667C8.36819 14.6667 8.66667 14.9651 8.66667 15.3333Z' fill='%2389A9FF'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_3871_25924'%3E%3Crect width='16' height='16' fill='white' transform='translate(0 4)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
-      background-position: center;
-      background-size: cover;
-      background-repeat: no-repeat;
-    }
-  }
-
   .table-responsive {
     .table {
       @extend .table-dark;
     }
     th, td {
       background: inherit;
+      img {
+        margin: 0;
+      }
     }
   }
 
