moved feedback buttons to the separate partials, added on click behavior, added github links

--- a/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
+++ b/qdrant-landing/themes/qdrant-2024/assets/css/main.scss
@@ -71,3 +71,4 @@
 @import 'partials/documentation-article';
 @import 'partials/documentation';
 @import 'partials/share-buttons';
+@import 'partials/feedback';
