--- a/qdrant-landing/themes/qdrant-2024/layouts/partials/documentation.html
+++ b/qdrant-landing/themes/qdrant-2024/layouts/partials/documentation.html
@@ -3,7 +3,7 @@
     <div class="row gx-4">
       {{ partial "docs-menu" . }}
       {{ partial "documentation-article" . }}
-      {{ partial "table-contents" . }}
+      {{ partial "table-of-contents" . }}
     </div>
   </div>
 </section>
